# calendar-crates

./: .gitignore  .justfile  CALICO-CORPUS-ERRORS.md  CALICO-MIGRATION.md  CLAUDE.md  Cargo.toml  README.md
.config/tracey/: config.styx
.github/workflows/: rust.yml
calendar-types/: Cargo.toml
calendar-types/src/: css.rs  duration.rs  lib.rs  primitive.rs  set.rs  string.rs  time.rs
calendar-types/tests/: edge_cases.rs
calico/: Cargo.toml  README.md
calico/src/: lib.rs  model.rs  parser.rs
calico/src/model/: component.rs  parameter.rs  primitive.rs  property.rs  rrule.rs  string.rs
calico/src/model/rrule/: weekday_num_set.rs
calico/src/parser/: component.rs  config.rs  error.rs  escaped.rs  parameter.rs  primitive.rs  property.rs  rrule.rs
calico/src/serializer/: component.rs  mod.rs  parameter.rs  primitive.rs  property.rs
calico/tests/: corpus.rs  fetch-fixtures.sh  round_trip.rs
jscalendar/: Cargo.toml
jscalendar/src/: json.rs  lib.rs  model.rs  parser.rs
jscalendar/src/model/: object.rs  primitive.rs  set.rs  string.rs  time.rs
jscalendar/tests/: edge_cases.rs  rfc-8984-examples.rs  round_trip.rs  string_edge_cases.rs
rfc5545-types/: Cargo.toml
rfc5545-types/src/: lib.rs  request_status.rs  rrule.rs  set.rs  string.rs  time.rs  value.rs
rfc5545-types/src/rrule/: weekday_num_set.rs
rfc5545-types/tests/: edge_cases.rs
spec/: calendar-types.md  calico.md  jscalendar.md  rfc5545-types.md
src/: json.rs  lib.rs  model.rs  parser.rs
src/model/: object.rs  primitive.rs  string.rs  time.rs
