[package]
name = "calico"
description = "A parser, printer, and data model for iCalendar."
repository.workspace = true
license.workspace = true
keywords = ["icalendar", "ical", "ics", "calendar", "rfc5545"]
categories = ["date-and-time", "encoding", "parser-implementations"]
version = "0.2.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
derive_more = { version = "2.0.1", default-features = false, features = ["try_into", "from"] }
enumflags2 = "0.7.12"
functor_derive = "0.4.3"
hashbrown = "0.15.5"
hashify = "0.2.7"
language-tags = "0.3.2"
lexical-parse-float = { version = "1.0.6", features = ["format"] }
mime = "0.3.17"
mitsein = "0.8.0"
paste = "1.0.15"
strum = { workspace = true }
winnow = "0.7.10"

[features]
memchr = ["winnow/simd"]
