[package]
name = "jscalendar"
version = "0.1.0"
edition = "2024"
repository.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]

[dependencies]
calendar-types = { version = "0.1.0", path = "../calendar-types" }
dizzy = "0.2.0"
hashbrown = "0.16.1"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0.18"
