[package]
name = "jscalendar"
version = "0.1.0"
edition = "2024"
repository.workspace = true
license.workspace = true
description = "JSCalendar (RFC 8984) data model with parser-agnostic JSON support"
keywords = ["calendar", "jscalendar", "rfc8984", "json"]
categories = ["date-and-time", "parser-implementations"]

[features]
serde_json = ["dep:serde_json"]

[dependencies]
calendar-types = { version = "0.1.0", path = "../calendar-types" }
rfc5545-types = { version = "0.1.0", path = "../rfc5545-types" }
dizzy.workspace = true
strum.workspace = true
language-tags = "0.3"
serde_json = { version = "1.0", optional = true }
thiserror = "2.0.18"
structible = "0.5.0"
